[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/EquipmentSlot.gd" type="Script" id=1]
[ext_resource path="res://Items/Equipment/Icons/chest.png" type="Texture" id=2]

[node name="EquipmentSlot" type="Control" groups=[
"EquipmentSlot",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1248.0
margin_bottom = -688.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultImage" type="TextureRect" parent="ReferenceRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentImage" type="TextureRect" parent="ReferenceRect"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}
